--- a/Api.Services/Vistas/TemplateMailCollaboratorStageApproval.cshtml
+++ b/Api.Services/Vistas/TemplateMailCollaboratorStageApproval.cshtml
@@ -1,4 +1,5 @@
 ﻿
+
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -19,13 +20,12 @@
                                     <tr>
                                         <td style="padding:0 0 20px;">
                                             <h3 style="font-family:'Helvetica Neue',Helvetica,Arial,'Lucida Grande',sans-serif;color:#000;margin:40px 0 0;line-height:1.2;font-weight:400;font-size:18px">
-                                                Carpeta Digital - Esmetal
+                                                Hola , se le ha asignado para el cargo de lider de evaluacion de desempeño, en el componente de 
                                             </h3>
                                             
-                                            <ul></ul>
+                                           
                                         </td>
                                     </tr>
-
                                 </table>
                             </td>
                         </tr>
