--- a/Api.Services/Vistas/TemplateMailLeader.cshtml
+++ b/Api.Services/Vistas/TemplateMailLeader.cshtml
@@ -24,7 +24,7 @@
                                                 Hola @Model.FullName, se le ha asignado para el cargo de lider de evaluacion de desempeño, en el componente de @Model.Component
                                             </h3>
                                             
-                                            <a href="http://localhost:4200/evaluation/@Model.EvaluationCollaboratorId/detail">
+                                            <a href="http://localhost:4200/auth/login?code=@Model.EvaluationCollaboratorId">
                                                 Ir a evaluar
                                             </a>
                                         </td>
